文件类型接口、业务开发完成
